--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,8 @@ repository: https://github.com/komapeb/data_connection_checker
 issue_tracker: https://github.com/komapeb/data_connection_checker/issues
 
 environment:
-  sdk: '>=2.2.0 <3.0.0'
-
+  #sdk: '>=2.2.0 <3.0.0'
+  sdk: '^3.0.0-21.0.dev' #15/12/22
 # dependencies:
 
 dev_dependencies:
